[package]
name = "rpc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
hyper-tls = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
